--- a/frontend/simple/src/index.css
+++ b/frontend/simple/src/index.css
@@ -25,7 +25,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 10mm;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -73,6 +73,25 @@ code {
       background-color: #333;
     }
 
+    .hand{
+      background-color: #000;
+      padding: 4mm;
+      margin-bottom: 10mm;
+      border-radius: 4mm;
+      overflow-x:hidden;
+      white-space: nowrap;
+    }
+
+    .hand-cards{
+      /* transform:scale(0.8) */
+      /* overflow-x:hidden; */
+      transform-origin:top left;
+    }
+    .hand-cards-inner{
+      overflow-x:hidden;
+      background: blue;
+      display:inline-block;
+    }
     .hand-name{
       color:white;
     }
@@ -88,12 +107,25 @@ code {
       padding: 1mm 5mm;
       margin: 1mm;
       cursor: pointer;
+      width: 20mm;
+    }
+    .hand-name-input{
+      width: 47.8mm;
+      padding: 1mm;
+    }
+    .hand-select{
+      width: 50mm;
+      padding: 1mm;
     }
 
     span.filter-label{
+      display: inline-block;
       color:white;
-      padding-left: 10px;
+      padding: 1mm 5mm;
+      margin: 1mm;
+      width: 20mm;
     }
+
     div.category-filter{
       height: 5mm;
       background: white;
@@ -138,47 +170,20 @@ code {
 
 
 
-
-
-    div.cardgame-card-print-wrapper {
-
-      /* transition-property: left;
-      transition-duration: 1s;
-      transition-delay: 0s; */
-
-      display: inline-block;
-      /* must be BLOCK for PDF */
-      width: 65mm;
-      height: 97mm;
-      /* height: 30mm; */
-      overflow: hidden;
-      /*Have to do 96 instead of 97 to prevent PDF issues. */
-      margin: 0;
-      padding: 0;
-      position: relative;
-      background-color: #aaaaaa;
-
-      /*border: solid 1px blue;*/
-      /* transform:rotate(2deg) */
-    }
-
     div.cardgame-card {
-      display: block;
+      display: inline-block;
       width: 59mm;
       height: 91mm;
+      position: relative;
 
-      position: absolute;
-      top: 3mm;
-      left: 3mm;
-
-      margin: 0;
+      margin: 2mm;
       padding: 0;
       vertical-align: top;
-      /*overflow-y: hidden;*/
+      overflow: hidden;
 
+      border-radius: 2mm;
 
-      /*border: solid 0px #999;*/
-      /*background-color: white;*/
+      /* border: solid 0.1mm #eee; */
     }
 
 
@@ -281,7 +286,7 @@ border: dashed 1px #aaa;
     }
 
     div.textual {
-      margin-left: 4mm;
+      margin-left: 3mm;
     }
 
     div.image-wrapper {
@@ -339,7 +344,7 @@ div.cardgame-card-contents img.screenshot{
       white-space: pre-line;
       margin-top: 5mm;
 
-      font-size: 9pt;
+      font-size: 10pt;
       line-height: 11pt;
       color: #333;
 
@@ -367,19 +372,6 @@ div.cardgame-card-contents img.screenshot{
       /*border: solid 0.5px #ccc;*/
     }
 
-    div.cardgame-category-bleed {
-      display: block;
-      position: absolute;
-      top: 5mm;
-      width: 8.5mm;
-      /*left: -0.0mm;*/
-      left: -4mm;
-
-      height: 18mm;
-
-      z-index: 50;
-      /*border: solid 0.5px #ccc;*/
-    }
 
     /*
 div.cat-UI{
