--- a/frontend/simple/src/index.css
+++ b/frontend/simple/src/index.css
@@ -161,6 +161,7 @@ code {
       font-size: 8pt;
       color: white;
       padding: 0.5mm;
+      /* height: 5px; */
     }    
     h3.mini-card-title{
       font-size: 10pt;
@@ -168,7 +169,77 @@ code {
       padding: 1mm;
     }
 
+    div.mid-card{
+      width: 30mm;
+      height: 26mm;
+      background: white;
+      margin: 2mm;
+      vertical-align: top;
 
+    }
+
+    div.mid-cardgame-card-contents {
+      position: absolute;
+      top: 6mm;
+      left: 3mm;
+      width: 28mm;
+      height: 21mm;
+      /* outline:solid 1px blue; */
+    }
+
+    div.mid-image-wrapper {
+      text-align: center;
+      position: absolute;
+      bottom: 0mm;
+      left: 0mm;
+      right: 0mm;
+      /* outline:solid 1px red; */
+    }
+    div.mid-cardgame-card-contents img {
+      position: relative;
+      max-width: 30mm;
+      max-height: 14mm;
+      /* outline:solid 1px green; */
+    }
+
+    div.mid-cardgame-card-contents img.screenshot {
+
+      box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.45);
+    }
+
+
+    /* div.mid-card-selected{
+      outline: white;
+      outline-width: 2mm;
+      outline-style: auto;
+    }
+
+    div.mid-card-category{
+      font-size: 8pt;
+      color: white;
+      padding: 0.5mm;
+    }    
+    h3.mid-card-title{
+      font-size: 10pt;
+      margin-top: 0mm;
+      padding: 1mm;
+    } */
+
+
+    /* div.resizer{
+      display: inline-block;
+      
+      position: relative;
+
+      margin: 2mm;
+      padding: 0;
+      vertical-align: top;
+      overflow: hidden;
+
+      border-radius: 2mm;
+
+      border: solid 2px blue;
+    } */
 
     div.cardgame-card {
       display: inline-block;
@@ -183,8 +254,11 @@ code {
 
       border-radius: 2mm;
 
-      /* border: solid 0.1mm #eee; */
+      /* transform: scale(0.4); */
+      /* border: solid 2px red; */
     }
+
+
 
 
 
@@ -279,10 +353,6 @@ border: dashed 1px #aaa;
       left: 4mm;
       width: 51mm;
       height: 83mm;
-      /*right: 4mm;
-  bottom: 2mm;*/
-
-      /*overflow: hidden;*/
     }
 
     div.textual {
