--- a/frontend/simple/src/index.css
+++ b/frontend/simple/src/index.css
@@ -25,7 +25,7 @@
 }
 
 body {
-  margin: 10mm;
+  /* margin: 10mm; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -56,6 +56,38 @@ code {
 }
 */
 
+h1{
+  margin-top: 2mm;
+  margin-bottom: 2mm
+}
+html, body, #root{
+  height: 100%;
+}
+#root{
+  /* padding: 10mm; */
+}
+
+.Board{
+  display:flex;
+  flex-direction: column;
+  border:solid blue 1px;
+  height: 100%;
+  /* margin: 10mm; */
+}
+
+.Board > div {
+  border:solid red 1px;
+}
+
+.hand{
+  flex-grow: 1;
+}
+.tools{
+  flex-grow: 1;
+  
+  max-height: 70mm;
+  overflow-y:scroll;
+}
 
     body.tech-deck-print {
       width: 210mm;
@@ -80,12 +112,17 @@ code {
       border-radius: 4mm;
       overflow-x:hidden;
       white-space: nowrap;
+      position: relative;
+    }
+
+    .hand-info{
+      position: absolute;
+      bottom: 5mm;
+      left: 5mm;
     }
 
     .hand-cards{
-      /* transform:scale(0.8) */
-      /* overflow-x:hidden; */
-      transform-origin:top left;
+      height: 100%;
     }
     .hand-cards-inner{
       overflow-x:hidden;
@@ -97,7 +134,7 @@ code {
     }
     .hand-description{
       color:#ccc;
-      margin-bottom: 30px;
+      margin-bottom: 0mm;
     }
 
     div.save-button{
@@ -175,6 +212,7 @@ code {
       background: white;
       margin: 2mm;
       vertical-align: top;
+      position: relative;
 
     }
 
